# jbigkit-shared

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  configure.ac  jbigkit.pc.in  jbigkit85.pc.in
libjbig/: Makefile.am
pbmtools/: Makefile.am
test/: Makefile.am
