bin_PROGRAMS = pbmtojbg pbmtojbg85 jbgtopbm jbgtopbm85
man_MANS = pbmtojbg.1 pbmtojbg85.1 jbgtopbm.1 jbgtopbm85.1 pbm.5 pgm.5

pbmtojbg_SOURCES = pbmtojbg.c
pbmtojbg_LDADD = ../libjbig/.libs/libjbig.a
pbmtojbg_CPPFLAGS = -I$(top_srcdir)/libjbig

pbmtojbg85_SOURCES = pbmtojbg85.c
pbmtojbg85_LDADD = ../libjbig/.libs/libjbig85.a
pbmtojbg85_CPPFLAGS = -I$(top_srcdir)/libjbig

jbgtopbm_SOURCES = jbgtopbm.c
jbgtopbm_LDADD = ../libjbig/.libs/libjbig.a
jbgtopbm_CPPFLAGS = -I$(top_srcdir)/libjbig

jbgtopbm85_SOURCES = jbgtopbm85.c
jbgtopbm85_LDADD = ../libjbig/.libs/libjbig85.a
jbgtopbm85_CPPFLAGS = -I$(top_srcdir)/libjbig
