noinst_PROGRAMS = tstcodec tstcodec85
check_PROGRAMS = tstcodec tstcodec85
tstcodec_SOURCES = $(top_srcdir)/libjbig/tstcodec.c $(top_srcsrc)/libjbig/.libs/libjbig.la
tstcodec_LDADD = -L$(top_srcdir)/libjbig/.libs -ljbig
tstcodec85_SOURCES = $(top_srcdir)/libjbig/tstcodec85.c $(top_srcsrc)/libjbig/.libs/libjbig85.la
tstcodec85_LDADD = -L$(top_srcdir)/libjbig/.libs -ljbig85
